# Team_Lab_2_Sem

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/api/: constructor.py  interface.py
db/: Dockerfile
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: app.css  app.tsx  index.css  layout.tsx
frontend/src/components/: 3  bar.tsx  editElement.tsx  editPage.js  editPage.tsx  mainPage.tsx  newPresentation.tsx  newPresentationPage.tsx  overlayMenu.tsx  searchPresentations.tsx  textInput.tsx  useScript.tsx
frontend/src/pages/: _app.tsx  _error.js  index.tsx  new.tsx
frontend/src/pages/presentations/[presentation]/: edit.tsx
frontend/src/scss/: app.module.scss  bar.module.scss  editor.module.scss  error.module.scss  globals.scss  newPres.module.scss  popup.module.scss  revealTheme.css
src/: Dockerfile
src/api/: constructor.py  database.py  interface.py  users.py
src/db/: database.py
