[tool]
[tool.pdm]

[project]
name = "reveal-gui"
version = "0.1.0"
description = "A GUI web application written in python for reveal.js"
authors = [
    {name = "radomyr", email = "h.radomyr@proton.me"},
]
dependencies = [
    "fastapi>=0.95.0",
    "fastapi-restful>=0.4.3",
    "uvicorn>=0.21.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPLv3"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
