[tool]
[tool.pdm]

[project]
name = "reveal-gui"
version = "0.1.0"
description = "A GUI web application written in python for reveal.js"
authors = [
    {name = "KateKoval", email = "kovalchuk.pn@ucu.edu.ua"},
]
dependencies = [
    "fastapi>=0.95.0",
    "fastapi-restful>=0.4.3",
    "uvicorn>=0.21.1",
]
requires-python = ">=3.10"
license = {text = "GPLv3"}
